fix: update box-shadow color in grid-download-card for improved visibility

--- a/apps/web-next/src/components/grid-download-card/grid-download-card.module.scss
+++ b/apps/web-next/src/components/grid-download-card/grid-download-card.module.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   border: g.$minecraftdepth solid rgb(30, 30, 31);
 
-  box-shadow: g.$minecraftdepth g.$minecraftdepth 0px 0px g.$color-overlay-card-light;
+  box-shadow: g.$minecraftdepth g.$minecraftdepth 0px 0px g.$color-overlay-card-dark;
   transition: transform 0.15s ease;
 
   @media (hover: hover) {
